se terminan los reportes de cobertura